# licode

./: .dockerignore  .editorconfig  .eslintignore  .eslintrc  .gitignore  .jshintignore  .jshintrc  .travis.yml  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cakefile  Dockerfile  LICENSE  LICENSE.md  OneToManyProcessor.h  README.md  WebRtcConnection.cc  WebRtcConnection.h  _config.yml  architecture.html  blog.html  client-api.html  community.html  getting-started.html  index.html  initNuve.sh  install.html  installErizo_controller.sh  installNuve.sh  licode_config.js  licode_config_aws.js  licode_config_template.js  licode_config_vm.js  mkdocs.yml  nginx.conf  notes.bak  package-lock.json  package.json  roadmap.html  (+4 more)
erizo/src/: CMakeLists.txt  Doxyfile.in  third_party.cmake
erizo/src/cmake/: Findglib.cmake
erizo/src/erizo/: CMakeLists.txt  DefaultValues.h  DtlsConnection.cpp  DtlsConnection.h  DtlsTransport.cpp  DtlsTransport.h  IceConnection.cpp  IceConnection.h  LibNiceConnection.cpp  LibNiceConnection.h  MediaDefinitions.h  MediaStream.cpp  MediaStream.h  NiceConnection.cpp  NiceConnection.h  NicerConnection.cpp  NicerConnection.h  OneToManyProcessor.cpp  OneToManyProcessor.h  RTPSink.cpp  SdesTransport.cpp  SdesTransport.h  SdpInfo.cpp  SdpInfo.h  SrtpChannel.cpp  SrtpChannel.h  Stats.cpp  Stats.h  StringUtil.cpp  StringUtil.h  Transceiver.cpp  Transceiver.h  Transport.h  UnencryptedTransport.cpp  UnencryptedTransport.h  WebRtcConnection.cpp  WebRtcConnection.h  logger.h  rtputils.h
erizo/src/erizo/bandwidth/: BandwidthDistributionAlgorithm.h  BwDistributionConfig.cpp  BwDistributionConfig.h  ConnectionQualityCheck.cpp  ConnectionQualityCheck.h  MaxVideoBWDistributor.cpp  MaxVideoBWDistributor.h  StreamPriorityBWDistributor.cpp  StreamPriorityBWDistributor.h  TargetVideoBWDistributor.cpp  TargetVideoBWDistributor.h
erizo/src/erizo/dtls/: DtlsClient.cpp  DtlsFactory.cpp  DtlsFactory.h  DtlsSocket.cpp  DtlsSocket.h  DtlsTimer.cpp  DtlsTimer.h  OpenSSLInit.cpp  OpenSSLInit.h  bf_dwrap.c  bf_dwrap.h  config.h
erizo/src/erizo/handlers/: .gitignore  HandlerImporter.cpp  HandlerImporter.h  LoggerHandler.cpp  LoggerHandler.h  LowerFPSHandler.cpp  LowerFPSHandler.h  handlers.py  installHandlers.sh  install_handlers.sh  parseHandlers.js  parseHandlers.py
erizo/src/erizo/lib/: Base64.h  Clock.h  ClockUtils.h  LibNiceInterface.h  LibNiceInterfaceImpl.cpp  NicerInterface.cpp  NicerInterface.h  TokenBucket.cpp  TokenBucket.h
erizo/src/erizo/media/: Depacketizer.cpp  Depacketizer.h  ExternalInput.cpp  ExternalInput.h  ExternalOutput.cpp  ExternalOutput.h  MediaInfo.h  MediaProcessor.cpp  MediaProcessor.h  OneToManyTranscoder.cpp  OneToManyTranscoder.h  SyncUtils.cpp  SyncUtils.h  SyntheticInput.cpp  SyntheticInput.h
erizo/src/erizo/pipeline/: Handler.h  HandlerContext-inl.h  HandlerContext.h  HandlerManager.h  Pipeline-inl.h  Pipeline.cpp  Pipeline.h  Service.h  ServiceContext-inl.h  ServiceContext.h
erizo/src/erizo/rtp/: BandwidthEstimationHandler.cpp  BandwidthEstimationHandler.h  FakeKeyframeGeneratorHandler.cpp  FakeKeyframeGeneratorHandler.h  FecReceiverHandler.cpp  FecReceiverHandler.h  LayerBitrateCalculationHandler.cpp  LayerBitrateCalculationHandler.h  LayerDetectorHandler.cpp  LayerDetectorHandler.h  LowerFPSHandler.cpp  LowerFPSHandler.h  NackGenerationHandler.cpp  NackGenerationHandler.h  PLIPacerHandler.cpp  PLIPacerHandler.h  PacketBufferService.cpp  PacketBufferService.h  PacketCodecParser.cpp  PacketCodecParser.h  PeriodicPliHandler.cpp  PeriodicPliHandler.h  PliPacerHandler.cpp  PliPacerHandler.h  PliPriorityHandler.cpp  PliPriorityHandler.h  QualityFilterHandler.cpp  QualityFilterHandler.h  QualityManager.cpp  QualityManager.h  RRGenerationHandler.cpp  RRGenerationHandler.h  RTPExtensions.h  RTPExtensionsMap.cpp  RTPExtensionsMap.h  RTPSink.h  RtcpAggregator.cpp  RtcpAggregator.h  RtcpFeedbackGenerationHandler.cpp  RtcpFeedbackGenerationHandler.h  (+65 more)
erizo/src/erizo/stats/: StatNode.cpp  StatNode.h
erizo/src/erizo/thread/: IOThreadPool.cpp  IOThreadPool.h  IOWorker.cpp  IOWorker.h  Scheduler.cpp  Scheduler.h  ThreadPool.cpp  ThreadPool.h  Timer.h  Worker.cpp  Worker.h
erizo/src/examples/: CMakeLists.txt  Test.cpp  Test.h  hsam.cpp
erizo/src/examples/pc/: PCSocket.cpp  PCSocket.h
erizo/src/test/: CMakeLists.txt  Chrome.sdp  DtlsSocketTest.cpp  LibNiceConnectionTest.cpp  NiceConnectionTest.cpp  NicerConnectionTest.cpp  OneToManyProcessorTest.cpp  Openwebrtc.sdp  PacketTest.cpp  SdpTest.cpp  WebRtcConnectionTest.cpp  log4cxx.properties  main.cpp  test.cpp
erizo/src/test/assets/: Chrome.sdp  ChromeSimulcast.sdp  Firefox.sdp  FirefoxSimulcast.sdp
erizo/src/test/bandwidth/: MaxVideoBWDistributor.cpp  StreamPriorityBWDistributor.cpp  TargetVideoBWDistributor.cpp
erizo/src/test/fallback/: ConnectionQualityCheckTest.cpp
erizo/src/test/lib/: TokenBucketTest.cpp
erizo/src/test/media/: DepacketizerTest.cpp  SyntheticInputTest.cpp
erizo/src/test/rtp/: BandwidthEstimationHandlerTest.cpp  FakeKeyframeGeneratorHandlerTest.cpp  FecReceiverHandlerTest.cpp  LayerBitrateCalculationHandlerTest.cpp  LayerDetectorHandlerTest.cpp  PLIPacerHandlerTest.cpp  PeriodicPliHandlerTest.cpp  PliPacerHandlerTest.cpp  PliPriorityHandlerTest.cpp  QualityManagerTest.cpp  RRGenerationHandlerTest.cpp  RrGeneratorTest.cpp  RtcpFeedbackGenerationHandlerTest.cpp  RtcpNackGeneratorTest.cpp  RtcpNewNackGeneratorTest.cpp  RtcpProcessorHandlerTest.cpp  RtcpRrGeneratorTest.cpp  RtpAudioMuteHandlerTest.cpp  RtpExtensionProcessorTest.cpp  RtpExtentionIdTranslatorTest.cpp  StatsHandlerTest.cpp  (+10 more)
src/: CMakeLists.txt  Doxyfile.in
src/erizo/: CMakeLists.txt  MediaDefinitions.h  NiceConnection.cpp  NiceConnection.h  OneToManyProcessor.cpp  OneToManyProcessor.h  RTPSink.cpp  RTPSink.h  SdpInfo.cpp  SdpInfo.h  SrtpChannel.cpp  SrtpChannel.h  WebRtcConnection.cpp  WebRtcConnection.h
src/erizo/media/: MediaProcessor.cpp  MediaProcessor.h  OneToManyTranscoder.h  Test.cpp  Test.h
src/examples/: Test.cpp  Test.h  hsam.cpp
src/examples/pc/: Observer.cpp  Observer.h  PCSocket.cpp  SDPReceiver.h
(+839 files in other folders)
